--- a/app/templates/public/acciones/view.html
+++ b/app/templates/public/acciones/view.html
@@ -40,7 +40,7 @@
       {% else %}
       <div class="col-12">
           <h2 class="text-center">
-              No existe el Coche
+              No existen fotos de las herramientas
           </h2>
       </div>
 {% endif %}
