--- a/app/templates/public/layout.html
+++ b/app/templates/public/layout.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Crud</title>
-  <link rel="shortcut icon" href="{{url_for('static', filename ='assets/imgs/favicon.png')}}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{url_for('static', filename ='assets/imgs/LOGO TRANSPARENTE.png')}}" type="image/x-icon">
   <link rel="stylesheet" href="{{ url_for('static', filename ='assets/css/bootstrap.min.css') }}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{{ url_for('static', filename ='assets/css/style.css') }}">
